// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component: RadioButtonField should render a disabled radio button field 1`] = `
.c3 + .c2 {
  margin-top: 16px;
}

.c8 {
  font-size: 18px;
  line-height: 28px;
  font-weight: 600;
  color: hsl(200,10%,20%);
}

.c5 {
  opacity: 0;
  height: 0;
  width: 0;
  margin: 0;
  position: absolute;
}

.c6 {
  display: inline-block;
  box-sizing: border-box;
  width: 16px;
  height: 16px;
  border-radius: 50%;
  background-color: hsl(0,0%,90%);
  border: 2px solid hsl(0,0%,90%);
}

.c6:after {
  position: absolute;
  content: '';
  display: none;
  width: 8px;
  height: 8px;
  border-radius: 50%;
  background-color: hsl(0,0%,90%);
  margin: 2px 2px;
  box-sizing: border-box;
}

.c4 {
  position: relative;
  display: inline-block;
  vertical-align: -1px;
  line-height: 16px;
  width: 16px;
  height: 16px;
  cursor: cursor;
}

.c4 input:checked ~ span {
  background-color: transparent;
}

.c4 input:checked ~ span:after {
  display: block;
}

.c4 input:focus ~ span {
  box-shadow: 0 0 8px hsl(200,96%,35%);
}

.c9 + .c0 {
  margin-top: 8px;
}

.c9 .c7 {
  cursor: pointer;
  padding-left: 8px;
}

.c1 + .c0 {
  margin-top: 8px;
}

.c1 .c7 {
  cursor: not-allowed;
  padding-left: 8px;
}

<div>
  <div
    class="c0 c1 c2 c3"
  >
    <label
      class="c4"
      for="rb"
    >
      <input
        class="c5"
        disabled=""
        id="rb"
        name="rb"
        type="radio"
      />
      <span
        aria-hidden="true"
        class="c6"
        disabled=""
      />
    </label>
    <label
      class="c7 c8"
      for="rb"
    >
      My Label
    </label>
  </div>
</div>
`;

exports[`component: RadioButtonField should render a radio button field 1`] = `
.c3 + .c2 {
  margin-top: 16px;
}

.c8 {
  font-size: 18px;
  line-height: 28px;
  font-weight: 600;
  color: hsl(200,10%,20%);
}

.c5 {
  opacity: 0;
  height: 0;
  width: 0;
  margin: 0;
  position: absolute;
}

.c6 {
  display: inline-block;
  box-sizing: border-box;
  width: 16px;
  height: 16px;
  border-radius: 50%;
  background-color: transparent;
  border: 2px solid hsl(200,96%,11%);
}

.c6:after {
  position: absolute;
  content: '';
  display: none;
  width: 8px;
  height: 8px;
  border-radius: 50%;
  background-color: hsl(200,96%,35%);
  margin: 2px 2px;
  box-sizing: border-box;
}

.c4 {
  position: relative;
  display: inline-block;
  vertical-align: -1px;
  line-height: 16px;
  width: 16px;
  height: 16px;
  cursor: pointer;
}

.c4 input:checked ~ span {
  border-color: hsl(200,96%,35%);
  background-color: transparent;
}

.c4 input:checked ~ span:after {
  display: block;
}

.c4 input:focus ~ span {
  box-shadow: 0 0 8px hsl(200,96%,35%);
}

.c1 + .c0 {
  margin-top: 8px;
}

.c1 .c7 {
  cursor: pointer;
  padding-left: 8px;
}

<div>
  <div
    class="c0 c1 c2 c3"
  >
    <label
      class="c4"
      for="rb"
    >
      <input
        class="c5"
        id="rb"
        name="rb"
        type="radio"
      />
      <span
        aria-hidden="true"
        class="c6"
      />
    </label>
    <label
      class="c7 c8"
      for="rb"
    >
      My Label
    </label>
  </div>
</div>
`;

exports[`component: RadioButtonField should support margin space props 1`] = `
.c3 + .c2 {
  margin-top: 16px;
}

.c8 {
  font-size: 18px;
  line-height: 28px;
  font-weight: 600;
  color: hsl(200,10%,20%);
}

.c5 {
  opacity: 0;
  height: 0;
  width: 0;
  margin: 0;
  position: absolute;
}

.c6 {
  display: inline-block;
  box-sizing: border-box;
  width: 16px;
  height: 16px;
  border-radius: 50%;
  background-color: transparent;
  border: 2px solid hsl(200,96%,11%);
}

.c6:after {
  position: absolute;
  content: '';
  display: none;
  width: 8px;
  height: 8px;
  border-radius: 50%;
  background-color: hsl(200,96%,35%);
  margin: 2px 2px;
  box-sizing: border-box;
}

.c4 {
  position: relative;
  display: inline-block;
  vertical-align: -1px;
  line-height: 16px;
  width: 16px;
  height: 16px;
  cursor: pointer;
}

.c4 input:checked ~ span {
  border-color: hsl(200,96%,35%);
  background-color: transparent;
}

.c4 input:checked ~ span:after {
  display: block;
}

.c4 input:focus ~ span {
  box-shadow: 0 0 8px hsl(200,96%,35%);
}

.c9 + .c0 {
  margin-top: 8px;
}

.c9 .c7 {
  cursor: pointer;
  padding-left: 8px;
}

.c10 + .c0 {
  margin-top: 8px;
}

.c10 .c7 {
  cursor: not-allowed;
  padding-left: 8px;
}

.c1 {
  margin-left: 16px;
}

.c1 + .c0 {
  margin-top: 8px;
}

.c1 .c7 {
  cursor: pointer;
  padding-left: 8px;
}

<div>
  <div
    class="c0 c1 c2 c3"
  >
    <label
      class="c4"
      for="Ackermann"
    >
      <input
        class="c5"
        id="Ackermann"
        name="rbf"
        type="radio"
      />
      <span
        aria-hidden="true"
        class="c6"
      />
    </label>
    <label
      class="c7 c8"
      for="Ackermann"
    >
      Mikasa
    </label>
  </div>
</div>
`;
